--- a/MonitorService/package.json
+++ b/MonitorService/package.json
@@ -16,7 +16,7 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "node-nmap": "^4.0.0",
-    "pug": "^2.0.0-beta6",
+    "pug": "^2.0.1",
     "serve-favicon": "^2.3.0"
   }
 }
