--- a/MonitorService/package.json
+++ b/MonitorService/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.7.0",
     "node-nmap": "^4.0.0",
     "pug": "^2.0.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "time-stamp": "^2.0.0"
   }
 }
