--- a/MonitorService/package.json
+++ b/MonitorService/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "mongoose": "^5.0.10",
+    "mongoose-unique-validator": "^2.0.0",
     "morgan": "^1.7.0",
     "node-nmap": "^4.0.0",
     "pug": "^2.0.1",
